# examination-terminal-fastapi

./: .env.test  .gitignore  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  run.sh  scheduler.py
alembic/: env.py
alembic/versions/: 2024_12_30_2238-6e1427602eaa_create_profile_user_role.py  2024_12_30_2255-1b7de8f22a5b_add_role_in_profile.py  2024_12_30_2257-d4a8a30c44b5_fix_role_in_profile.py  2024_12_30_2302-2e6bbd7fe3c7_fix_2_role_in_profile.py  2024_12_30_2337-badd67f2f212_add_role_in_profile.py  2024_12_30_2340-09a76cd4cd15_add_role_in_profile.py  2024_12_30_2351-c4a61fed85cf_add_role_in_profile.py  2024_12_31_0001-8257b164f4eb_add_role_in_profile.py  2024_12_31_0001-cd3d1a1988c5_add_role_in_profile.py  2025_01_06_0210-d8d2214f1a99_create_course.py  2025_01_06_0219-bf492ac1d6e5_change_links_coursestudentassociation.py  2025_01_07_1554-64a7144fa8ba_database_test_creation.py  2025_01_07_1913-f35de246b14f_change_test.py  2025_01_08_0159-374ed29cc88f_change_test_table.py  2025_01_08_0322-8916e5c45432_add_question_table.py  2025_01_11_2208-23f00adc340f_сðcreate_test_progress.py  2025_01_12_0331-1660d43fd0db_сðcreate_test_progress.py  2025_01_12_1359-012074672316_сðcreate_test_progress.py  2025_01_12_1412-200a898f0c9f_сðcreate_test_progress.py  2025_01_12_1537-538c7f02a3fa_database_creation.py  2025_01_12_1545-75cc277e026f_database_creation.py  2025_01_12_1642-4aca4661f4ff_фðadd_percent.py  (+5 more)
api_v1/: __init__.py
api_v1/auth/: crud.py  utils.py  (+5 more)
core/: config.py
tests/: conftest.py  course_test.py  test_db.py
(+43 files in other folders)
